WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
138177
[EME] NULL-dereference crash in MediaKeys::setMediaElement().
https://bugs.webkit.org/show_bug.cgi?id=138177
Summary
[EME] NULL-dereference crash in MediaKeys::setMediaElement().
Jer Noble
Reported
2014-10-29 09:23:40 PDT
[EME] NULL-dereference crash in MediaKeys::setMediaElement().
Attachments
Patch
(1.75 KB, patch)
2014-10-29 09:25 PDT
,
Jer Noble
eric.carlson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2014-10-29 09:25:11 PDT
Created
attachment 240606
[details]
Patch
Jer Noble
Comment 2
2014-10-29 10:54:34 PDT
Committed
r175333
: <
http://trac.webkit.org/changeset/175333
>
Jer Noble
Comment 3
2014-12-16 13:28:52 PST
<
rdar://problem/19269064
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug