[EME] NULL-dereference crash in MediaKeys::setMediaElement(). https://bugs.webkit.org/show_bug.cgi?id=138177

Reviewed by Eric Carlson.

NULL-check m_mediaElement->player() before using. It may have been cleared if the HTMLMediaElement
has previously had stop() called.

* Modules/encryptedmedia/MediaKeys.cpp:
(WebCore::MediaKeys::setMediaElement):

Canonical link: https://commits.webkit.org/156019@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@175333 268f45cc-cd09-0410-ab3c-d52691b4dbfc