Source/WebCore/Modules/encryptedmedia/MediaKeys.cpp
@@ -144,12 +144,12 @@ bool MediaKeys::isTypeSupported(const String& keySystem, const String& mimeType)
 
 void MediaKeys::setMediaElement(HTMLMediaElement* element)
 {
-    if (m_mediaElement)
+    if (m_mediaElement && m_mediaElement->player())
         m_mediaElement->player()->setCDMSession(nullptr);
 
     m_mediaElement = element;
 
-    if (m_mediaElement && !m_sessions.isEmpty())
+    if (m_mediaElement && m_mediaElement->player() && !m_sessions.isEmpty())
         m_mediaElement->player()->setCDMSession(m_sessions.last()->session());
 }
 
